# treeclust

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  single-cell.ipynb
docs/: README.md  build_docs.sh  conf.py  index.rst  installation.rst  quickstart.rst
docs/api/: bootstrapping.rst  clustering.rst  decomposition.rst  index.rst  metrics.rst  neighbors.rst  plotting.rst  utils.rst  validation.rst
docs/examples/: basic_clustering.rst  index.rst  multiresolution_analysis.rst
docs/tutorials/: index.rst
examples/: multiresolution_test.py  scanpy_clustering_example.py  scanpy_neighbors_example.py  scanpy_plotting_example.py  single-cell.ipynb  sklearn_example.py
examples/old/: classifier_sampling_example.py  coassotiation_example.py  consensus_example.py  consensus_graph_example.py  consensus_leiden_example.py  consensus_simple_test.py  hierarchy_graph_visualization.py  leiden_example.py  leiden_multiple_partition_types.py  louvain_example.py  parameter_bootstrapping_example.py  simple_demo.py  single-cell.ipynb  three_blobs_example.py  three_blobs_example_with_reliability.py
treeclust/: __init__.py  metrics.py  struct_base.py  struct_leiden.py  utils.py
treeclust/annotation/: __init__.py  utils.py
treeclust/clustering/: __init__.py  leiden.py  louvain.py  multiresolution_leiden.py  multiresolution_louvain.py
treeclust/decomposition/: __init__.py  scvi.py  sklearn.py  tsne.py  umap.py  vae.py  vae_broken.py
treeclust/metrics/: __init__.py  metrics.py
treeclust/neighbors/: __init__.py  cmnn.py  cnn.py  coassotiation.py  mnn.py  neighbors.py  sklearn.py  utils.py
treeclust/pipelines/: __init__.py  pipelines.py
treeclust/plotting/: __init__.py  graph.py  multiresolution_clusters.py  multiresolution_dotplot.py  multiresolution_graph.py
treeclust/scanpy/: __init__.py  scanpy_wrappers.py
treeclust/scanpy/pl/: __init__.py  plotting.py
treeclust/scanpy/pp/: __init__.py  neighbors.py
treeclust/scanpy/tl/: __init__.py  annotation.py  clustering.py
treeclust/validation/: __init__.py  data_splitter.py
